# ChemAgent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  FRONTEND_VERIFICATION.md  FUTURE_ENHANCEMENTS_PLAN.md  GETTING_STARTED.md  Makefile  PHASE3_COMPLETE.md  PHASE3_WEEK1_SUMMARY.md  README.md  TESTING_IMPROVEMENTS.md  TESTING_PLAN.md  debug_compound.py  debug_plan.py  docker-compose.dev.yml  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  requirements.txt  test_ui.py  test_ui_fixed.py
.github/workflows/: docker.yml  test.yml
benchmarks/: run_benchmarks.py
configs/mcp/: claude_desktop_config.json  vscode_mcp.json
data/: query_history.json
data/golden_queries/: compound_lookup.json  edge_cases.json  properties.json  similarity.json  targets.json  workflows.json
data/results/: frontend_test_results.json  frontend_test_v2.json  frontend_test_v3.json
docs/: API.md  API_DOCUMENTATION.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  MULTI_AGENT_GUIDE.md  PHASE_C_COMPLETION_REPORT.md  PROGRESS_STREAMING_ANALYSIS.md  README.md  ROADMAP.md  STRATEGIC_ROADMAP.md  USER_GUIDE.md
docs/archive/: OLD_README.md
docs/archive/development-history/: COMPARISON.md  PHASE2_COMPLETION_REPORT.md  PHASE3_WEEK3_COMPLETION.md  PHASE4_WEEK1_SUMMARY.md  PHASE4_WEEK2_SUMMARY.md  PHASE_ASSESSMENT_AND_PLAN.md  PROJECT_SUMMARY.md  WEEK3_COMPLETION_REPORT.md
docs/archive/frontend/: FRONTEND_DEMO.md
docs/archive/session-notes/: BUG_FIX_SESSION_SUMMARY.md  IMPROVEMENTS_COMPLETE.md  QUERY_FIX_SUMMARY.md  TESTING_SESSION_SUMMARY.md  UI_FIX_SUMMARY.md
docs/developer/: ARCHITECTURE.md  CLAUDE_DESKTOP_INTEGRATION.md  MCP_GUIDE.md  MULTI_AGENT_ARCHITECTURE.md  VSCODE_INTEGRATION.md  testing.md
docs/getting-started/: examples.md  installation.md  quickstart.md
docs/planning/: FUTURE_ENHANCEMENTS_PLAN.md  LLM_INTEGRATION_PLAN.md  REORGANIZATION_PLAN.md
docs/user-guide/: DEPLOYMENT_GUIDE.md  FRONTEND_GUIDE.md
examples/: ai_agent_usage.py  basic_usage.py  benchmark_parallel.py  database_clients.py  end_to_end_demo.py  full_capability_demo.py  multi_agent_demo.py  orchestrator_usage.py  real_world_demo.py
scripts/: run_tests.sh  server.sh  start_api.sh  start_server.slurm  validate.py
scripts/debug/: debug_tool.py  test_improvements.py  test_query.py  test_quick.py  test_target_query.py  test_uniprot_fix.py
src/chemagent/: __init__.py  __main__.py  caching.py  cli.py  config.py  exceptions.py  monitoring.py
src/chemagent/api/: __init__.py  server.py
src/chemagent/clients/: __init__.py  opentargets_client.py
src/chemagent/core/: __init__.py  context_manager.py  evidence.py  executor.py  export.py  intent_parser.py  llm_router.py  multi_agent.py  optimal_agent.py  parallel.py  persistence.py  provenance.py  query_planner.py  (+2 more)
tests/: conftest.py  frontend_integration_test.py  test_api.py  test_evaluation.py  test_llm_router.py  test_mcp.py  test_monitoring.py  test_parallel_execution.py
tests/integration/: README.md  __init__.py  query_generator.py  test_comprehensive.py  test_full_pipeline.py  test_regression.py
tests/unit/: test_admet_predictor.py  test_chembl_client.py  test_drugbank_client.py  test_executor.py  test_intent_parser.py  test_query_planner.py  test_rdkit_tools.py  test_verifier.py
(+38 files in other folders)
